# ctest-actions-bug

./: CMakeLists.txt  README.md  test_demo.cpp
.github/workflows/: ctest-actions-bug.yml
